--- a/public/css/style.css
+++ b/public/css/style.css
@@ -592,6 +592,15 @@ footer li i {
   width: 87%;
   justify-content: flex-end;
   padding-top: 30px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  line-height: 0;
+  font-size: 1.2em;
+  margin: 20px 20px 0px 0px;
+  fill: transparent;
+  stroke: var(--dark-pink);
+  stroke-width: 2;
 }
 @media screen and (min-width: 1024px) {
   .menu__heart {
