--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -28,6 +28,15 @@
         width: 87%;
         justify-content: flex-end;
         padding-top: 30px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        line-height: 0;
+        font-size: 1.2em;
+        margin: 20px 20px 0px 0px;
+        fill: transparent;
+        stroke: var(--dark-pink);
+        stroke-width: 2;
     }
 
     &__subtitle {
