--- a/public/css/style.css
+++ b/public/css/style.css
@@ -583,23 +583,22 @@ footer li i {
   justify-content: space-between;
 }
 .menu__title h1 {
+  display: flex;
   font-family: "Shrikhand", cursive;
   font-size: 1.8em;
-  padding: 25px 30px 0px 0px;
+  padding-top: 25px;
 }
 .menu__heart {
   display: flex;
-  width: 87%;
   justify-content: flex-end;
-  position: absolute;
-  right: 0;
-  top: 29px;
   line-height: 0;
   font-size: 1.2em;
-  margin: 20px 20px 0px 0px;
+  margin: 20px 10px 0px 0px;
   fill: transparent;
   stroke: var(--dark-pink);
   stroke-width: 2;
+  flex: 1;
+  align-items: center;
 }
 @media screen and (min-width: 1024px) {
   .menu__heart {
