--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -11,9 +11,10 @@
         flex-direction: row;
         justify-content: space-between;
         & h1 {
+            display: flex;
             font-family: $font-shrikhand;
             font-size: 1.8em;
-            padding: 25px 30px 0px 0px;
+            padding-top: 25px;
         }
     }
 
@@ -25,17 +26,15 @@
             width: 92%;
         }
         display: flex;
-        width: 87%;
         justify-content: flex-end;
-        position: absolute;
-        right: 0;
-        top: 29px;
         line-height: 0;
         font-size: 1.2em;
-        margin: 20px 20px 0px 0px;
+        margin: 20px 10px 0px 0px;
         fill: transparent;
         stroke: var(--dark-pink);
         stroke-width: 2;
+        flex: 1;
+        align-items: center;
     }
 
     &__subtitle {
